[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/MenuPause.gd" type="Script" id=1]
[ext_resource path="res://Ressources/Menu pause/Banni√®re pause.png" type="Texture" id=2]
[ext_resource path="res://Ressources/Fonts/PixelFontPetit.tres" type="DynamicFont" id=3]

[node name="Node2D" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Node2D"]
position = Vector2( -5.40945, -113.565 )
scale = Vector2( 0.506725, 0.506725 )
texture = ExtResource( 2 )

[node name="Options" type="Button" parent="Node2D"]
margin_left = -157.01
margin_top = 7.25623
margin_right = 164.99
margin_bottom = 64.2562
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "OPTIONS"
flat = true

[node name="Restart" type="Button" parent="Node2D"]
margin_left = -160.596
margin_top = 66.2562
margin_right = 180.404
margin_bottom = 123.256
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "RESTART"
flat = true

[node name="Resume" type="Button" parent="Node2D"]
margin_left = -140.343
margin_top = -45.1038
margin_right = 156.657
margin_bottom = 11.8962
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "RESUME"
flat = true

[node name="Menu" type="Button" parent="Node2D"]
margin_left = -487.855
margin_top = 219.91
margin_right = -284.855
margin_bottom = 276.91
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "MENU"
flat = true

[connection signal="pressed" from="Node2D/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Node2D/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Node2D/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Node2D/Menu" to="." method="_on_Menu_pressed"]
